Fix invisible scrollbar on chrome (at least on unix)

--- a/frontend/src/mycStyle.css
+++ b/frontend/src/mycStyle.css
@@ -1817,7 +1817,8 @@ nav.navbar {
             .descAndNav .text.desc {
                 height: 16rem;
                 max-height: 16rem;
-                overflow: scroll;
+                overflow-y: auto;
+                overflow-x: unset;
             }
             .descAndNav .text.desc p:last-of-type {
                 display: inline;
@@ -1922,10 +1923,21 @@ nav.navbar {
             pointer-events: none; /* so the text is still selectable */
         }
     /* vertical overflows */
-        .masked-overflow-y::-webkit-scrollbar{
+        /* .masked-overflow-y::-webkit-scrollbar{
             display: none;
           
-        }
+        } */
+        .masked-overflow-y::-webkit-scrollbar {
+            width: 0.8rem;
+          }
+          .masked-overflow-y::-webkit-scrollbar-track {
+            background: transparent;
+          }
+          .masked-overflow-y::-webkit-scrollbar-thumb {
+            background-color: rgba(155, 155, 155, 0.5);
+            border-radius: 20px;
+            border: transparent;
+          }
         .masked-overflow-y {
             /* scroll bar width, for use in mask calculations*/
                 --scrollbar-width: 0.8rem;
